[package]
name = "lustre"
version = "0.1.0"
authors = ["luismalheiro <luismalheiro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lustre_lib = { path = "../lustre-lib"}
lustre-macro-reader = { path = "../lustre-macro-reader"}